[package]
name = "cx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.80.0"
cranelift-module = "0.80.0"
cranelift-jit = "0.80.0"
target-lexicon = "0.12.2"

cx_syn = { version = "0.1.0", path = "../cx_syn" }
cx_ir = { version = "0.1.0", path = "../cx_ir" }
cx_lower = { version = "0.1.0", path = "../cx_lower" }
