[package]
name = "cx_syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
logos = "0.12.0"
bitflags = "1.3.2"

[build-dependencies]
lalrpop = "0.19.6"